added another bad year exclusion to publications

--- a/query_examples.ipynb
+++ b/query_examples.ipynb
@@ -2440,23 +2440,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
-      "{'authors': 'Moravec J. and Brzoska D.',\n",
-      " 'pages': '495-526',\n",
-      " 'publisher': 'Studies and Reports',\n",
-      " 'title': 'Taxonomic revision within the subtribe Odontocheilina in a new '\n",
-      "          'sense 10. Odontocheila castelnaui species-group (Coleoptera: '\n",
-      "          'Cicindelidae).',\n",
-      " 'url': 'FR-TAF 3715',\n",
-      " 'volume': 'Taxonomic series 10(2)',\n",
-      " 'year': '1914'}\n"
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271914%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
+      "{'authors': 'Candan, F., Ünlü, M., Tepe, B., Daferera, D., Polissiou, M., '\n",
+      "            'Sökmen, A., Akpulat, H.A.',\n",
+      " 'pages': '215-220',\n",
+      " 'publisher': 'Journal of Ethnopharmacology',\n",
+      " 'title': 'Antioxidant and antimicrobial activity of the essential oil and '\n",
+      "          'methanolectracts of Achillea millefolium subsp. millefolium Afan. '\n",
+      "          '(Asteraceae).',\n",
+      " 'url': 'no_data',\n",
+      " 'volume': '87',\n",
+      " 'year': '2003'}\n"
      ]
     }
    ],
@@ -2469,6 +2470,7 @@
     " volume as Volume, pages as Pages, publisher as Publisher, url as URL\n",
     " FROM publications\n",
     " WHERE publicationstatus = 'Published'\n",
+    " AND year != '1914'\n",
     " AND year != '1990'\n",
     " And year != '201'\n",
     " And year != 'no_data'\n",
@@ -2491,14 +2493,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+iso+%3D+%27GBR%27%0A+AND+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+iso+%3D+%27GBR%27%0A+AND+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271914%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
       "{'authors': ' Kaczmarek, L., Michalczyk, L. and Diduszko, D.',\n",
       " 'pages': '35-45',\n",
       " 'publisher': 'Zootaxa/Magnolia Press',\n",
@@ -2521,6 +2523,7 @@
     " FROM publications\n",
     " WHERE iso = '{country}'\n",
     " AND publicationstatus = 'Published'\n",
+    " AND year != '1914'\n",
     " AND year != '1990'\n",
     " And year != '201'\n",
     " And year != 'no_data'\n",
@@ -2542,14 +2545,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+discipline+%3D+%27Humanities%27%0A+AND+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+discipline+%3D+%27Humanities%27%0A+AND+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271914%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
       "{'authors': 'Picton,B.E. and Goodwin,C.E.',\n",
       " 'pages': '1441-1458',\n",
       " 'publisher': 'Journal of the Marine Biological Association of the UK',\n",
@@ -2570,6 +2573,7 @@
     " FROM publications\n",
     " WHERE discipline = '{discipline}'\n",
     " AND publicationstatus = 'Published'\n",
+    " AND year != '1914'\n",
     " AND year != '1990'\n",
     " And year != '201'\n",
     " And year != 'no_data'\n",
@@ -2591,14 +2595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+synthround+%3D+%27R1%27%0A+AND+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
+      "https://synthesys.carto.com/api/v2/sql?q=SELECT+year+as+Year%2C+authors+as+Authors%2C+title+as+Title%2C%0A+volume+as+Volume%2C+pages+as+Pages%2C+publisher+as+Publisher%2C+url+as+URL%0A+FROM+publications%0A+WHERE+synthround+%3D+%27R1%27%0A+AND+publicationstatus+%3D+%27Published%27%0A+AND+year+%21%3D+%271914%27%0A+AND+year+%21%3D+%271990%27%0A+And+year+%21%3D+%27201%27%0A+And+year+%21%3D+%27no_data%27%0A+ORDER+BY+year%0A\n",
       "{'authors': 'Dauphin Y., Cuif J.P., Doucet J., Salomé M., Susini J., Williams '\n",
       "            'C.T.',\n",
       " 'pages': '299-304',\n",
@@ -2622,6 +2626,7 @@
     " FROM publications\n",
     " WHERE synthround = '{synth_funding_round}'\n",
     " AND publicationstatus = 'Published'\n",
+    " AND year != '1914'\n",
     " AND year != '1990'\n",
     " And year != '201'\n",
     " And year != 'no_data'\n",
